# helix

./: .gitignore  Makefile  README.md  SafeToken.sol  VulnerableVault.sol  attack_replay_contracts.py  ci_smoke_test.py  fix_extractor.py  fix_score.py  helix.bat  helix_scan.py  immune_library_50.json  immune_library_500.json  immune_library_500_sources_V1.0_202604120804.json  initial_20.json  mainnet_test_contracts.py  mainnet_test_manifest.json  mainnet_test_runner.py  mismatch_detector.py  proxy_fp_test_runner.py  replay_test_runner.py  requirements-ci.txt  requirements.txt
.github/workflows/: helix-ci.yml
hpl/: Cargo.toml  README.md
hpl/contracts/: WrappedPoint.sol
hpl/src/: abi.rs  bytecode.rs  client.rs  lib.rs  main.rs
hpl/tests/: spike.rs
node/: Cargo.toml  README.md
node/src/: chain.rs  config.rs  detector.rs  executor.rs  genesis.rs  hook.rs  immune.rs  lib.rs  main.rs  mempool.rs  node.rs  rpc.rs  state.rs
node/tests/: e2e.rs
proxy_fp_tests/: BeaconProxy.sol  CREATE2Factory.sol  DiamondVault.sol  MinimalProxy.sol  TransparentProxy.sol  UUPSToken.sol
