[package]
name = "hpl"
version = "0.1.0"
edition = "2024"

# HELIX Points Layer — spike client (deploy + balance only).
# Standalone crate: the runtime binary talks to the HELIX devnet purely over
# JSON-RPC. The integration test dev-depends on helix-node to boot a node
# in-process; the node crate itself is NOT modified.

[dependencies]
alloy-consensus = { version = "2.0.5", features = ["k256"] }
alloy-eips = "2.0.5"
alloy-primitives = "1.6.0"
alloy-signer = "2.0.5"
alloy-signer-local = "2.0.5"
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
hex = "0.4.3"
reqwest = { version = "0.13.4", default-features = false, features = ["json"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "time"] }

[dev-dependencies]
helix-node = { path = "../node" }
